<?xml version="1.0"?>
<package format="2">
  <name>leo_driving</name>
  <version>0.0.0</version>
  <description>Autonomous Tunnel Driving Package</description>
  <maintainer email="haeyeon8669@gmail.com">HaeyeonGim</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
    <exec_depend>laser_geometry</exec_depend>

  <export>
    <nodelet plugin="${prefix}/plugins/cmd_publish_nodelet.xml" />
    <nodelet plugin="${prefix}/plugins/localization_nodelet.xml" />
    <nodelet plugin="${prefix}/plugins/aisle_detect_nodelet.xml" />
    <nodelet plugin="${prefix}/plugins/obstacles_nodelet.xml" />
  </export>


</package>
